# online_store_django

./: .env.example  README.md  products_fixture.json  pyproject.toml
catalog/: admin.py  models.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_product_image.py
catalog/templates/: home.html
config/: settings.py
